--- a/Descriptives.html
+++ b/Descriptives.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-02-28" />
 
-<title>APIM - Descriptives</title>
+<title>Social Control - Descriptives</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1895,7 +1895,7 @@ font-size: 0.95em;
 
 
 
-<h1 class="title toc-ignore">APIM - Descriptives</h1>
+<h1 class="title toc-ignore">Social Control - Descriptives</h1>
 <h4 class="author">Pascal Küng, MSc, Patrick Höhener, MSc, James M.
 Allen, PhD, Robert Tobias, PhD, Urte Scholz, PhD</h4>
 <h4 class="date">2025-02-28</h4>
@@ -2048,17 +2048,19 @@ Allen, PhD, Robert Tobias, PhD, Urte Scholz, PhD</h4>
 <span id="cb3-126"><a href="#cb3-126" tabindex="-1"></a>n_couple_vars <span class="ot">&lt;-</span> <span class="dv">17</span></span>
 <span id="cb3-127"><a href="#cb3-127" tabindex="-1"></a>sample_table<span class="sc">$</span>n_Obs[<span class="dv">1</span><span class="sc">:</span>n_couple_vars] <span class="ot">&lt;-</span> sample_table<span class="sc">$</span>n_Obs[<span class="dv">1</span><span class="sc">:</span>n_couple_vars] <span class="sc">/</span> <span class="dv">2</span></span>
 <span id="cb3-128"><a href="#cb3-128" tabindex="-1"></a></span>
-<span id="cb3-129"><a href="#cb3-129" tabindex="-1"></a>packing_sample <span class="ot">&lt;-</span> <span class="fu">list</span>(</span>
-<span id="cb3-130"><a href="#cb3-130" tabindex="-1"></a>    <span class="st">&quot;Couple level variables (38 couples)&quot;</span> <span class="ot">=</span> </span>
-<span id="cb3-131"><a href="#cb3-131" tabindex="-1"></a>      <span class="fu">c</span>(<span class="dv">1</span>, n_couple_vars),</span>
-<span id="cb3-132"><a href="#cb3-132" tabindex="-1"></a>    <span class="st">&quot;Individual level variables (76 individuals)&quot;</span> </span>
-<span id="cb3-133"><a href="#cb3-133" tabindex="-1"></a>    <span class="ot">=</span> <span class="fu">c</span>(n_couple_vars<span class="sc">+</span><span class="dv">1</span>, <span class="fu">nrow</span>(sample_table))</span>
-<span id="cb3-134"><a href="#cb3-134" tabindex="-1"></a>    ) </span>
-<span id="cb3-135"><a href="#cb3-135" tabindex="-1"></a></span>
-<span id="cb3-136"><a href="#cb3-136" tabindex="-1"></a>df_sample_summary <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
-<span id="cb3-137"><a href="#cb3-137" tabindex="-1"></a>  sample_table,</span>
-<span id="cb3-138"><a href="#cb3-138" tabindex="-1"></a>  <span class="at">rows_to_pack =</span> packing_sample</span>
-<span id="cb3-139"><a href="#cb3-139" tabindex="-1"></a>)</span></code></pre></div>
+<span id="cb3-129"><a href="#cb3-129" tabindex="-1"></a><span class="fu">names</span>(sample_table) <span class="ot">&lt;-</span> <span class="fu">c</span>(<span class="st">&#39;Variable&#39;</span>, <span class="st">&#39;Level&#39;</span>, <span class="st">&#39;n Observations&#39;</span>, <span class="st">&#39;% Observations&#39;</span>, <span class="st">&#39;Missing&#39;</span>, <span class="st">&#39;Mean&#39;</span>, <span class="st">&#39;SD&#39;</span>, <span class="st">&#39;Range&#39;</span>)</span>
+<span id="cb3-130"><a href="#cb3-130" tabindex="-1"></a></span>
+<span id="cb3-131"><a href="#cb3-131" tabindex="-1"></a>packing_sample <span class="ot">&lt;-</span> <span class="fu">list</span>(</span>
+<span id="cb3-132"><a href="#cb3-132" tabindex="-1"></a>    <span class="st">&quot;Couple level variables (38 couples)&quot;</span> <span class="ot">=</span> </span>
+<span id="cb3-133"><a href="#cb3-133" tabindex="-1"></a>      <span class="fu">c</span>(<span class="dv">1</span>, n_couple_vars),</span>
+<span id="cb3-134"><a href="#cb3-134" tabindex="-1"></a>    <span class="st">&quot;Individual level variables (76 individuals)&quot;</span> </span>
+<span id="cb3-135"><a href="#cb3-135" tabindex="-1"></a>    <span class="ot">=</span> <span class="fu">c</span>(n_couple_vars<span class="sc">+</span><span class="dv">1</span>, <span class="fu">nrow</span>(sample_table))</span>
+<span id="cb3-136"><a href="#cb3-136" tabindex="-1"></a>    ) </span>
+<span id="cb3-137"><a href="#cb3-137" tabindex="-1"></a></span>
+<span id="cb3-138"><a href="#cb3-138" tabindex="-1"></a>df_sample_summary <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
+<span id="cb3-139"><a href="#cb3-139" tabindex="-1"></a>  sample_table,</span>
+<span id="cb3-140"><a href="#cb3-140" tabindex="-1"></a>  <span class="at">rows_to_pack =</span> packing_sample</span>
+<span id="cb3-141"><a href="#cb3-141" tabindex="-1"></a>)</span></code></pre></div>
 <pre><code>## 
 ## Attaching package: &#39;kableExtra&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:dplyr&#39;:
@@ -2068,8 +2070,11 @@ Allen, PhD, Robert Tobias, PhD, Urte Scholz, PhD</h4>
 <span id="cb6-2"><a href="#cb6-2" tabindex="-1"></a>            <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;SampleDescription.xlsx&#39;</span>),</span>
 <span id="cb6-3"><a href="#cb6-3" tabindex="-1"></a>            <span class="at">merge_option =</span> <span class="st">&#39;both&#39;</span>,</span>
 <span id="cb6-4"><a href="#cb6-4" tabindex="-1"></a>            <span class="at">rows_to_pack =</span> packing_sample,</span>
-<span id="cb6-5"><a href="#cb6-5" tabindex="-1"></a>            <span class="at">colwidths =</span> <span class="fu">c</span>(<span class="dv">20</span>,<span class="dv">35</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">10</span>)</span>
-<span id="cb6-6"><a href="#cb6-6" tabindex="-1"></a>            )</span></code></pre></div>
+<span id="cb6-5"><a href="#cb6-5" tabindex="-1"></a>            <span class="at">colwidths =</span> <span class="fu">c</span>(<span class="dv">20</span>,<span class="dv">35</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">7</span>,<span class="dv">10</span>),</span>
+<span id="cb6-6"><a href="#cb6-6" tabindex="-1"></a>            <span class="at">simplify_2nd_row =</span> <span class="cn">FALSE</span>,</span>
+<span id="cb6-7"><a href="#cb6-7" tabindex="-1"></a>            <span class="at">line_above_rows =</span> <span class="fu">c</span>(<span class="dv">0</span>,<span class="dv">1</span>),</span>
+<span id="cb6-8"><a href="#cb6-8" tabindex="-1"></a>            <span class="at">line_below_rows =</span> <span class="fu">c</span>(<span class="sc">-</span><span class="dv">1</span>)</span>
+<span id="cb6-9"><a href="#cb6-9" tabindex="-1"></a>            )</span></code></pre></div>
 <pre><code>## 
 ## Attaching package: &#39;rvest&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:readr&#39;:
@@ -2087,10 +2092,10 @@ Variable
 Level
 </th>
 <th style="text-align:right;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-n_Obs
+n Observations
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-percentage_Obs
+% Observations
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
 Missing
@@ -2967,12 +2972,25 @@ NA
 <span id="cb10-8"><a href="#cb10-8" tabindex="-1"></a>  <span class="at">ICC =</span> <span class="cn">TRUE</span>, </span>
 <span id="cb10-9"><a href="#cb10-9" tabindex="-1"></a>  <span class="at">cluster_var =</span> df_full<span class="sc">$</span>userID)</span>
 <span id="cb10-10"><a href="#cb10-10" tabindex="-1"></a></span>
-<span id="cb10-11"><a href="#cb10-11" tabindex="-1"></a>openxlsx<span class="sc">::</span><span class="fu">write.xlsx</span>(</span>
-<span id="cb10-12"><a href="#cb10-12" tabindex="-1"></a>  main_descriptives, </span>
-<span id="cb10-13"><a href="#cb10-13" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesMain.xlsx&#39;</span>)</span>
-<span id="cb10-14"><a href="#cb10-14" tabindex="-1"></a>  )</span>
-<span id="cb10-15"><a href="#cb10-15" tabindex="-1"></a></span>
-<span id="cb10-16"><a href="#cb10-16" tabindex="-1"></a><span class="fu">print_df</span>(main_descriptives)</span></code></pre></div>
+<span id="cb10-11"><a href="#cb10-11" tabindex="-1"></a><span class="fu">names</span>(main_descriptives) <span class="ot">&lt;-</span> <span class="fu">c</span>(<span class="st">&#39;Variable&#39;</span>, <span class="st">&#39;n Observations&#39;</span>, <span class="st">&#39;Missing&#39;</span>, <span class="st">&#39;Mean&#39;</span>, <span class="st">&#39;SD&#39;</span>, <span class="st">&#39;Range&#39;</span>)</span>
+<span id="cb10-12"><a href="#cb10-12" tabindex="-1"></a></span>
+<span id="cb10-13"><a href="#cb10-13" tabindex="-1"></a></span>
+<span id="cb10-14"><a href="#cb10-14" tabindex="-1"></a>df_main_descriptives <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
+<span id="cb10-15"><a href="#cb10-15" tabindex="-1"></a>  main_descriptives</span>
+<span id="cb10-16"><a href="#cb10-16" tabindex="-1"></a>)</span>
+<span id="cb10-17"><a href="#cb10-17" tabindex="-1"></a></span>
+<span id="cb10-18"><a href="#cb10-18" tabindex="-1"></a></span>
+<span id="cb10-19"><a href="#cb10-19" tabindex="-1"></a><span class="fu">export_xlsx</span>(</span>
+<span id="cb10-20"><a href="#cb10-20" tabindex="-1"></a>  df_main_descriptives,</span>
+<span id="cb10-21"><a href="#cb10-21" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesMain.xlsx&#39;</span>),</span>
+<span id="cb10-22"><a href="#cb10-22" tabindex="-1"></a>  <span class="at">merge_option =</span> <span class="st">&#39;both&#39;</span>,</span>
+<span id="cb10-23"><a href="#cb10-23" tabindex="-1"></a>  <span class="co">#colwidths = c(20,35,7,7,7,7,7,10),</span></span>
+<span id="cb10-24"><a href="#cb10-24" tabindex="-1"></a>  <span class="at">simplify_2nd_row =</span> <span class="cn">FALSE</span>,</span>
+<span id="cb10-25"><a href="#cb10-25" tabindex="-1"></a>  <span class="at">line_above_rows =</span> <span class="fu">c</span>(<span class="dv">0</span>,<span class="dv">1</span>),</span>
+<span id="cb10-26"><a href="#cb10-26" tabindex="-1"></a>  <span class="at">line_below_rows =</span> <span class="fu">c</span>(<span class="sc">-</span><span class="dv">1</span>)</span>
+<span id="cb10-27"><a href="#cb10-27" tabindex="-1"></a>)</span>
+<span id="cb10-28"><a href="#cb10-28" tabindex="-1"></a></span>
+<span id="cb10-29"><a href="#cb10-29" tabindex="-1"></a>df_main_descriptives</span></code></pre></div>
 <div style="border: 1px solid #ddd; padding: 0px; overflow-y: scroll; height:500px; overflow-x: scroll; width:100%; ">
 <table class="table table-striped table-hover table-responsive" style="color: black; width: auto !important; ">
 <thead>
@@ -2981,7 +2999,7 @@ NA
 Variable
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-n_Obs
+n Observations
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
 Missing
@@ -2996,7 +3014,7 @@ SD
 Range
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-ICC
+NA
 </th>
 </tr>
 </thead>
@@ -3183,12 +3201,24 @@ reactance
 <span id="cb11-13"><a href="#cb11-13" tabindex="-1"></a></span>
 <span id="cb11-14"><a href="#cb11-14" tabindex="-1"></a>all_descriptives <span class="ot">&lt;-</span> <span class="fu">report_measures</span>(df_full, all_constructs, <span class="at">ICC =</span> F)</span>
 <span id="cb11-15"><a href="#cb11-15" tabindex="-1"></a></span>
-<span id="cb11-16"><a href="#cb11-16" tabindex="-1"></a>openxlsx<span class="sc">::</span><span class="fu">write.xlsx</span>(</span>
-<span id="cb11-17"><a href="#cb11-17" tabindex="-1"></a>  all_descriptives, </span>
-<span id="cb11-18"><a href="#cb11-18" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesAll.xlsx&#39;</span>)</span>
-<span id="cb11-19"><a href="#cb11-19" tabindex="-1"></a>)</span>
-<span id="cb11-20"><a href="#cb11-20" tabindex="-1"></a></span>
-<span id="cb11-21"><a href="#cb11-21" tabindex="-1"></a><span class="fu">print_df</span>(all_descriptives)</span></code></pre></div>
+<span id="cb11-16"><a href="#cb11-16" tabindex="-1"></a><span class="fu">names</span>(all_descriptives) <span class="ot">&lt;-</span> <span class="fu">c</span>(<span class="st">&#39;Variable&#39;</span>, <span class="st">&#39;Level&#39;</span>, <span class="st">&#39;n Observations&#39;</span>, <span class="st">&#39;% Observations&#39;</span>, <span class="st">&#39;Missing&#39;</span>, <span class="st">&#39;Mean&#39;</span>, <span class="st">&#39;SD&#39;</span>, <span class="st">&#39;Range&#39;</span>)</span>
+<span id="cb11-17"><a href="#cb11-17" tabindex="-1"></a></span>
+<span id="cb11-18"><a href="#cb11-18" tabindex="-1"></a>df_all_descriptives <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
+<span id="cb11-19"><a href="#cb11-19" tabindex="-1"></a>  all_descriptives</span>
+<span id="cb11-20"><a href="#cb11-20" tabindex="-1"></a>)</span>
+<span id="cb11-21"><a href="#cb11-21" tabindex="-1"></a></span>
+<span id="cb11-22"><a href="#cb11-22" tabindex="-1"></a></span>
+<span id="cb11-23"><a href="#cb11-23" tabindex="-1"></a><span class="fu">export_xlsx</span>(</span>
+<span id="cb11-24"><a href="#cb11-24" tabindex="-1"></a>  df_all_descriptives,</span>
+<span id="cb11-25"><a href="#cb11-25" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesAll.xlsx&#39;</span>),</span>
+<span id="cb11-26"><a href="#cb11-26" tabindex="-1"></a>  <span class="at">merge_option =</span> <span class="st">&#39;both&#39;</span>,</span>
+<span id="cb11-27"><a href="#cb11-27" tabindex="-1"></a>  <span class="co">#colwidths = c(20,35,7,7,7,7,7,10),</span></span>
+<span id="cb11-28"><a href="#cb11-28" tabindex="-1"></a>  <span class="at">simplify_2nd_row =</span> <span class="cn">FALSE</span>,</span>
+<span id="cb11-29"><a href="#cb11-29" tabindex="-1"></a>  <span class="at">line_above_rows =</span> <span class="fu">c</span>(<span class="dv">0</span>,<span class="dv">1</span>),</span>
+<span id="cb11-30"><a href="#cb11-30" tabindex="-1"></a>  <span class="at">line_below_rows =</span> <span class="fu">c</span>(<span class="sc">-</span><span class="dv">1</span>)</span>
+<span id="cb11-31"><a href="#cb11-31" tabindex="-1"></a>)</span>
+<span id="cb11-32"><a href="#cb11-32" tabindex="-1"></a></span>
+<span id="cb11-33"><a href="#cb11-33" tabindex="-1"></a>df_all_descriptives</span></code></pre></div>
 <div style="border: 1px solid #ddd; padding: 0px; overflow-y: scroll; height:500px; overflow-x: scroll; width:100%; ">
 <table class="table table-striped table-hover table-responsive" style="color: black; width: auto !important; ">
 <thead>
@@ -3200,10 +3230,10 @@ Variable
 Level
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-n_Obs
+n Observations
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
-percentage_Obs
+% Observations
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
 Missing
