--- a/Descriptives.html
+++ b/Descriptives.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Pascal Küng, MSc, Patrick Höhener, MSc, James M. Allen, PhD, Robert Tobias, PhD, Urte Scholz, PhD" />
 
-<meta name="date" content="2025-02-28" />
+<meta name="date" content="2025-03-03" />
 
 <title>Social Control - Descriptives</title>
 
@@ -1898,7 +1898,7 @@ font-size: 0.95em;
 <h1 class="title toc-ignore">Social Control - Descriptives</h1>
 <h4 class="author">Pascal Küng, MSc, Patrick Höhener, MSc, James M.
 Allen, PhD, Robert Tobias, PhD, Urte Scholz, PhD</h4>
-<h4 class="date">2025-02-28</h4>
+<h4 class="date">2025-03-03</h4>
 
 </div>
 
@@ -3191,34 +3191,36 @@ reactance
 <span id="cb11-3"><a href="#cb11-3" tabindex="-1"></a>  <span class="st">&quot;day&quot;</span>,</span>
 <span id="cb11-4"><a href="#cb11-4" tabindex="-1"></a>  <span class="st">&quot;weartime&quot;</span>,</span>
 <span id="cb11-5"><a href="#cb11-5" tabindex="-1"></a>  <span class="st">&quot;isWeekend&quot;</span>,</span>
-<span id="cb11-6"><a href="#cb11-6" tabindex="-1"></a>  <span class="st">&quot;plan&quot;</span>,</span>
-<span id="cb11-7"><a href="#cb11-7" tabindex="-1"></a>  <span class="st">&quot;studyGroup&quot;</span>,</span>
-<span id="cb11-8"><a href="#cb11-8" tabindex="-1"></a>  <span class="st">&quot;support&quot;</span>,</span>
-<span id="cb11-9"><a href="#cb11-9" tabindex="-1"></a>  <span class="st">&quot;got_JITAI&quot;</span>,</span>
-<span id="cb11-10"><a href="#cb11-10" tabindex="-1"></a>  <span class="st">&quot;skilled_support&quot;</span></span>
-<span id="cb11-11"><a href="#cb11-11" tabindex="-1"></a>)</span>
-<span id="cb11-12"><a href="#cb11-12" tabindex="-1"></a></span>
-<span id="cb11-13"><a href="#cb11-13" tabindex="-1"></a></span>
-<span id="cb11-14"><a href="#cb11-14" tabindex="-1"></a>all_descriptives <span class="ot">&lt;-</span> <span class="fu">report_measures</span>(df_full, all_constructs, <span class="at">ICC =</span> F)</span>
+<span id="cb11-6"><a href="#cb11-6" tabindex="-1"></a>  <span class="st">&quot;barriers&quot;</span>,</span>
+<span id="cb11-7"><a href="#cb11-7" tabindex="-1"></a>  <span class="st">&quot;facilitators&quot;</span>,</span>
+<span id="cb11-8"><a href="#cb11-8" tabindex="-1"></a>  <span class="st">&quot;plan&quot;</span>,</span>
+<span id="cb11-9"><a href="#cb11-9" tabindex="-1"></a>  <span class="st">&quot;studyGroup&quot;</span>,</span>
+<span id="cb11-10"><a href="#cb11-10" tabindex="-1"></a>  <span class="st">&quot;support&quot;</span>,</span>
+<span id="cb11-11"><a href="#cb11-11" tabindex="-1"></a>  <span class="st">&quot;got_JITAI&quot;</span>,</span>
+<span id="cb11-12"><a href="#cb11-12" tabindex="-1"></a>  <span class="st">&quot;skilled_support&quot;</span></span>
+<span id="cb11-13"><a href="#cb11-13" tabindex="-1"></a>)</span>
+<span id="cb11-14"><a href="#cb11-14" tabindex="-1"></a></span>
 <span id="cb11-15"><a href="#cb11-15" tabindex="-1"></a></span>
-<span id="cb11-16"><a href="#cb11-16" tabindex="-1"></a><span class="fu">names</span>(all_descriptives) <span class="ot">&lt;-</span> <span class="fu">c</span>(<span class="st">&#39;Variable&#39;</span>, <span class="st">&#39;Level&#39;</span>, <span class="st">&#39;n Observations&#39;</span>, <span class="st">&#39;% Observations&#39;</span>, <span class="st">&#39;Missing&#39;</span>, <span class="st">&#39;Mean&#39;</span>, <span class="st">&#39;SD&#39;</span>, <span class="st">&#39;Range&#39;</span>)</span>
+<span id="cb11-16"><a href="#cb11-16" tabindex="-1"></a>all_descriptives <span class="ot">&lt;-</span> <span class="fu">report_measures</span>(df_full, all_constructs, <span class="at">ICC =</span> F)</span>
 <span id="cb11-17"><a href="#cb11-17" tabindex="-1"></a></span>
-<span id="cb11-18"><a href="#cb11-18" tabindex="-1"></a>df_all_descriptives <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
-<span id="cb11-19"><a href="#cb11-19" tabindex="-1"></a>  all_descriptives</span>
-<span id="cb11-20"><a href="#cb11-20" tabindex="-1"></a>)</span>
-<span id="cb11-21"><a href="#cb11-21" tabindex="-1"></a></span>
-<span id="cb11-22"><a href="#cb11-22" tabindex="-1"></a></span>
-<span id="cb11-23"><a href="#cb11-23" tabindex="-1"></a><span class="fu">export_xlsx</span>(</span>
-<span id="cb11-24"><a href="#cb11-24" tabindex="-1"></a>  df_all_descriptives,</span>
-<span id="cb11-25"><a href="#cb11-25" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesAll.xlsx&#39;</span>),</span>
-<span id="cb11-26"><a href="#cb11-26" tabindex="-1"></a>  <span class="at">merge_option =</span> <span class="st">&#39;both&#39;</span>,</span>
-<span id="cb11-27"><a href="#cb11-27" tabindex="-1"></a>  <span class="co">#colwidths = c(20,35,7,7,7,7,7,10),</span></span>
-<span id="cb11-28"><a href="#cb11-28" tabindex="-1"></a>  <span class="at">simplify_2nd_row =</span> <span class="cn">FALSE</span>,</span>
-<span id="cb11-29"><a href="#cb11-29" tabindex="-1"></a>  <span class="at">line_above_rows =</span> <span class="fu">c</span>(<span class="dv">0</span>,<span class="dv">1</span>),</span>
-<span id="cb11-30"><a href="#cb11-30" tabindex="-1"></a>  <span class="at">line_below_rows =</span> <span class="fu">c</span>(<span class="sc">-</span><span class="dv">1</span>)</span>
-<span id="cb11-31"><a href="#cb11-31" tabindex="-1"></a>)</span>
-<span id="cb11-32"><a href="#cb11-32" tabindex="-1"></a></span>
-<span id="cb11-33"><a href="#cb11-33" tabindex="-1"></a>df_all_descriptives</span></code></pre></div>
+<span id="cb11-18"><a href="#cb11-18" tabindex="-1"></a><span class="fu">names</span>(all_descriptives) <span class="ot">&lt;-</span> <span class="fu">c</span>(<span class="st">&#39;Variable&#39;</span>, <span class="st">&#39;Level&#39;</span>, <span class="st">&#39;n Observations&#39;</span>, <span class="st">&#39;% Observations&#39;</span>, <span class="st">&#39;Missing&#39;</span>, <span class="st">&#39;Mean&#39;</span>, <span class="st">&#39;SD&#39;</span>, <span class="st">&#39;Range&#39;</span>)</span>
+<span id="cb11-19"><a href="#cb11-19" tabindex="-1"></a></span>
+<span id="cb11-20"><a href="#cb11-20" tabindex="-1"></a>df_all_descriptives <span class="ot">&lt;-</span> <span class="fu">print_df</span>(</span>
+<span id="cb11-21"><a href="#cb11-21" tabindex="-1"></a>  all_descriptives</span>
+<span id="cb11-22"><a href="#cb11-22" tabindex="-1"></a>)</span>
+<span id="cb11-23"><a href="#cb11-23" tabindex="-1"></a></span>
+<span id="cb11-24"><a href="#cb11-24" tabindex="-1"></a></span>
+<span id="cb11-25"><a href="#cb11-25" tabindex="-1"></a><span class="fu">export_xlsx</span>(</span>
+<span id="cb11-26"><a href="#cb11-26" tabindex="-1"></a>  df_all_descriptives,</span>
+<span id="cb11-27"><a href="#cb11-27" tabindex="-1"></a>  <span class="fu">file.path</span>(<span class="st">&#39;Output&#39;</span>, <span class="st">&#39;DescriptivesAll.xlsx&#39;</span>),</span>
+<span id="cb11-28"><a href="#cb11-28" tabindex="-1"></a>  <span class="at">merge_option =</span> <span class="st">&#39;both&#39;</span>,</span>
+<span id="cb11-29"><a href="#cb11-29" tabindex="-1"></a>  <span class="co">#colwidths = c(20,35,7,7,7,7,7,10),</span></span>
+<span id="cb11-30"><a href="#cb11-30" tabindex="-1"></a>  <span class="at">simplify_2nd_row =</span> <span class="cn">FALSE</span>,</span>
+<span id="cb11-31"><a href="#cb11-31" tabindex="-1"></a>  <span class="at">line_above_rows =</span> <span class="fu">c</span>(<span class="dv">0</span>,<span class="dv">1</span>),</span>
+<span id="cb11-32"><a href="#cb11-32" tabindex="-1"></a>  <span class="at">line_below_rows =</span> <span class="fu">c</span>(<span class="sc">-</span><span class="dv">1</span>)</span>
+<span id="cb11-33"><a href="#cb11-33" tabindex="-1"></a>)</span>
+<span id="cb11-34"><a href="#cb11-34" tabindex="-1"></a></span>
+<span id="cb11-35"><a href="#cb11-35" tabindex="-1"></a>df_all_descriptives</span></code></pre></div>
 <div style="border: 1px solid #ddd; padding: 0px; overflow-y: scroll; height:500px; overflow-x: scroll; width:100%; ">
 <table class="table table-striped table-hover table-responsive" style="color: black; width: auto !important; ">
 <thead>
@@ -3534,6 +3536,58 @@ NA
 </td>
 <td style="text-align:left;width: auto; white-space: nowrap;">
 NA
+</td>
+</tr>
+<tr>
+<td style="text-align:left;white-space: nowrap;">
+barriers
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+1856
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+56%
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+0.95
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+0.81
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+0.00- 3.57
+</td>
+</tr>
+<tr>
+<td style="text-align:left;white-space: nowrap;">
+facilitators
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+1856
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+56%
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+1.03
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+1.12
+</td>
+<td style="text-align:left;width: auto; white-space: nowrap;">
+0.00- 5.00
 </td>
 </tr>
 <tr>
@@ -4334,6 +4388,12 @@ weartime
 isWeekend
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
+barriers
+</th>
+<th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
+facilitators
+</th>
+<th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
 plan
 </th>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;position: sticky; top:0; background-color: #FFFFFF;">
@@ -4381,6 +4441,12 @@ persuasion
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.06***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.01
@@ -4436,6 +4502,12 @@ pressure
 -0.00
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.00
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 0.03
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4484,6 +4556,12 @@ pushing
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.08***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.03
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.24***
@@ -4536,6 +4614,12 @@ pa_sub
 0.04*
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.14***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 0.47***
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4584,6 +4668,12 @@ pa_obj
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.06***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.05
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.08***
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.10***
@@ -4636,6 +4726,12 @@ aff
 0.06***
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.11***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.15***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 0.05**
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4684,6 +4780,12 @@ reactance
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.06
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.03
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.03
@@ -4736,6 +4838,12 @@ NA
 -0.08***
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.05*
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.03
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4784,6 +4892,12 @@ NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.07***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.02
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.00
@@ -4836,6 +4950,12 @@ NA
 [0.00]
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.06**
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.09***
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4849,6 +4969,118 @@ NA
 </td>
 <td style="text-align:left;white-space: nowrap;">
 0.01
+</td>
+</tr>
+<tr>
+<td style="text-align:left;white-space: nowrap;">
+barriers
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.17
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.05
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.13
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.05
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.17
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.03
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.23
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+[0.09]
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.46***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.00
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.11***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.06*
+</td>
+<td style="text-align:left;white-space: nowrap;">
+-0.03
+</td>
+</tr>
+<tr>
+<td style="text-align:left;white-space: nowrap;">
+facilitators
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.10
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.05
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.10
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.27
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.06
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.06
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.05
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.02
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+[0.28]
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.02
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.15***
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.03
+</td>
+<td style="text-align:left;white-space: nowrap;">
+0.03
 </td>
 </tr>
 <tr>
@@ -4884,6 +5116,12 @@ NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.14
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.34*
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 [0.14]
@@ -4936,6 +5174,12 @@ NA
 NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+0.02
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.24
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.08
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -4984,6 +5228,12 @@ NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.01
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.22
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 0.46**
@@ -5036,6 +5286,12 @@ NA
 NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.14
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.03
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
 0.24
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
@@ -5084,6 +5340,12 @@ NA
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 NA
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+0.04
+</td>
+<td style="text-align:left;width: 7em; white-space: nowrap;">
+-0.27
 </td>
 <td style="text-align:left;width: 7em; white-space: nowrap;">
 -0.15
